apps/propagandon/dev/deployment.beat.yml
apiVersion: apps/v1
kind: Deployment 
metadata: { name: beat }
spec:
  template:
    spec:
      containers:
        - name: beat
          imagePullPolicy: Always
          command: [ "celery", "-A", "main", "beat", "-l", "info", "--scheduler", "django_celery_beat.schedulers:DatabaseScheduler" ]
