apps/propagandon/dev/deployment.front.yml
apiVersion: apps/v1
kind: Deployment 
metadata: { name: front }
spec:
  template:
    spec:
      containers:
        - name: front
          imagePullPolicy: Always
