apps/propagandon/dev/deployment.worker.yml
apiVersion: apps/v1
kind: Deployment 
metadata: { name: worker }
spec:
  template:
    spec:
      containers:
        - name: worker
          imagePullPolicy: Always
          command: [ "celery", "-A", "main", "worker", "-l", "info" ]
