apps/propagandon/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: propagandon
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
      - dev.propagandon.online 
    secretName: dev-propagandon-online-tls
  rules:
    - host: dev.propagandon.online
      http:
        paths:
          - { path: /auth/,         pathType: Prefix, backend: { service: { name: propagandon, port: { name: back-http } } } }
          - { path: /api/,          pathType: Prefix, backend: { service: { name: propagandon, port: { name: back-http } } } }
          # Should be declared only in the dev patch
          - { path: /admin/,        pathType: Prefix, backend: { service: { name: propagandon, port: { name: back-http } } } }
          - { path: /back-static/,  pathType: Prefix, backend: { service: { name: propagandon, port: { name: back-http } } } }
          - { path: /back-media/,   pathType: Prefix, backend: { service: { name: propagandon, port: { name: back-http } } } }
          - { path: /__debug__/,    pathType: Prefix, backend: { service: { name: propagandon, port: { name: back-http } } } }
          #
          - { path: /connection/websocket, pathType: Prefix, backend: { service: { name: propagandon, port: { name: websocket } } } }

          - { path: /,             pathType: Prefix, backend: { service: { name: propagandon, port: { name: front-http } } } }
